Fixing overflow issues on large screens.

--- a/scss/_patterns_tabs.scss
+++ b/scss/_patterns_tabs.scss
@@ -38,6 +38,7 @@
 
       @media screen and (min-width: $breakpoint-medium) {
         max-width: $grid-max-width;
+        overflow: none;
         padding: 0 $sp-large;
       }
     }
